Fixed bugs.  Only issue remaining is containers uncentered when on small screens.

--- a/styles.css
+++ b/styles.css
@@ -198,9 +198,7 @@ button {
     border: none;
 }
 
-button {
-    appearance: ;
-}
+
 
 .btn__menu--svg:hover {
     filter: invert(26%) sepia(94%) saturate(7476%) hue-rotate(261deg) brightness(94%) contrast(115%);
@@ -211,36 +209,26 @@ svg:not(:root) {
     overflow: hidden;
 }
 
-svg[Attributes Style] {
-    width: 24;
-    height: 24;
-    fill: none;
-    stroke: currentcolor;
-    stroke-width: 2;
-    stroke-linecap: round;
-    stroke-linejoin: round;
+
+
+.menu__links {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-transitions style {
-    border-left-color: rgb(34, 58, 93);
-    border-left-width: 0px;
-    border-right-color: rgb(34, 58, 93);
-    border-right-width: 0px;
-    color: rgb(35, 60, 96);
-    border-top-color: rgb(34, 58, 93);
-    border-top-width: 0px;
-    margin-bottom: 0px;
-    padding-bottom: 0.0304957px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    padding-left: 0.182974px;
-    padding-right: 0.182974px;
-    padding-top: 0.0304957px;
-    background-color: rgba(240, 240, 240, 0.03);
-    border-bottom-color: rgb(34, 58, 93);
-    border-bottom-width: 0px;
+.menu__link {
+    color: #1a202c;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 1.5;
+    margin: 8px 0;
+    padding-bottom: 4px;
+    border-bottom: 2px solid transparent;
 }
+
 
 
 /*
@@ -248,6 +236,10 @@ transitions style {
 HEADER
 
 */
+
+section {
+    padding: 0 32px;
+}
 
 header {
     position: relative;
@@ -408,6 +400,12 @@ h4 {
 FEATURES
 
 */
+
+#features .row__narrow {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 .row__narrow {
     width: 100%;
@@ -774,7 +772,7 @@ PRICING
 
 .plan:nth-child(odd) .plan__name,
 .plan:nth-child(odd) .plan__price,
-.plan:nth-child(odd) .plan_duration,{
+.plan:nth-child(odd) .plan_duration {
     color: #243e63;
 }
 
@@ -988,10 +986,11 @@ START
 
 */
 
-path[Attributes Style] {
-    d: path("M 153.6 -239 C 199.1 -209.8 236 -167.2 258.4 -118 C 280.9 -68.9 288.9 -13.1 281.2 40.4 C 273.5 93.9 250.1 145.2 214.7 186.1 C 179.3 226.9 131.9 257.4 80 272.6 C 28.2 287.8 -28.2 287.8 -80 272.6 C -131.9 257.4 -179.3 226.9 -214.7 186.1 C -250.1 145.2 -273.5 93.9 -281.2 40.4 C -288.9 -13.1 -280.9 -68.9 -258.4 -118 C -236 -167.2 -199.1 -209.8 -153.6 -239 C -108.1 -268.3 -54.1 -284.1 0 -284.1 C 54.1 -284.1 108.1 -268.3 153.6 -239 Z");
-    fill: rgb(80, 17, 204);
+#start .row{
+    position: relative;
+    overflow: hidden;
 }
+
 
 .start__blob--1 {
     position: absolute;
@@ -1006,7 +1005,7 @@ path[Attributes Style] {
 
 .start__blob--2 {
     position: absolute;
-    top: 0px;
+    top:0px;
     right: 0px;
     height: 20rem;
     width: 20rem;
@@ -1083,7 +1082,7 @@ FOOTER
 
 */
 
-footer__row {
+.footer__row {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -1266,11 +1265,7 @@ SMALL SCREENS
 
 /* FEATURES__MEDIA */
 
-#features .row__narrow {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+
 
 @media (max-width: 640px) {
     #features .section__title, #pricing .section__title {
@@ -1348,6 +1343,13 @@ SMALL SCREENS
     .quality__description {
         margin-right: 0px;
         padding-right: 48px;
+    }
+}
+
+@media (max-width: 1024px) {
+    .plans {
+        flex-direction: column;
+        align-items: center;
     }
 }
 
